# AINative

./: .gitignore  CLAUDE.md  README.md  epic-neuro-syntax-ide-roadmap.md  module_1_core_workspace.md  module_2_task_data_layer.md  module_3_terminal_editor.md  module_4_mission_dashboard.md  module_5_ai_orchestration.md  package-lock.json  project-context.md  tauri_architecture_plan.md  tauri_development_modules.md
.neuro/: roles.json
docs/: plan-march-2026.md  (+1 more)
neuro-syntax-ide/src-tauri/: Cargo.toml  tauri.conf.json
neuro-syntax-ide/src-tauri/capabilities/: default.json
neuro-syntax-ide/src-tauri/icons/: icon.icns
neuro-syntax-ide/src-tauri/resources/skill-bundle/: plugin.json
neuro-syntax-ide/src-tauri/resources/skill-bundle/commands/: dev-agent.md
neuro-syntax-ide/src-tauri/resources/skill-bundle/skills/block-feature/: skill.md
neuro-syntax-ide/src-tauri/resources/skill-bundle/skills/cleanup-features/: skill.md
neuro-syntax-ide/src-tauri/resources/skill-bundle/skills/complete-feature/: skill.md
neuro-syntax-ide/src-tauri/resources/skill-bundle/skills/enrich-feature/: skill.md
neuro-syntax-ide/src-tauri/resources/skill-bundle/skills/feature-config/: skill.md
neuro-syntax-ide/src-tauri/resources/skill-bundle/skills/implement-feature/: skill.md
neuro-syntax-ide/src-tauri/resources/skill-bundle/skills/init-project/: skill.md
neuro-syntax-ide/src-tauri/resources/skill-bundle/templates/: archive-log.yaml  config.yaml  config.yaml.example  queue.yaml
neuro-syntax-ide/src-tauri/src/: jsonl_parser.rs  jsonl_watcher.rs  lib.rs  main.rs  skill_init.rs
(+733 files in other folders)
