[package]
name = "neuro-syntax-ide"
version = "0.1.0"
description = "AI-native desktop IDE"
authors = ["Neuro Syntax Team"]
edition = "2021"

[lib]
name = "neuro_syntax_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
