[package]
name = "neuro-syntax-ide"
version = "0.1.0"
description = "AI-native desktop IDE"
authors = ["Neuro Syntax Team"]
edition = "2021"

[lib]
name = "neuro_syntax_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
notify = { version = "7", features = ["macos_kqueue"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
git2 = "0.20"
base64 = "0.22"

# AI Agent Service dependencies
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
keyring = "3"
zip = "2"
